feat: add links

--- a/index.html
+++ b/index.html
@@ -1161,16 +1161,22 @@
                 alt="">https://expressjs.com/en/resources/template-engines.html</a>
             </li>
             <li class="item">
-              <div class="item-title">Руководство по Node.js, часть 10: стандартные модули, потоки, базы данных, NODE_ENV</div>
-              <a class="item-link" href="https://habr.com/ru/companies/ruvds/articles/425667/" target="_blank" alt="">https://habr.com/ru/companies/ruvds/articles/425667/</a>
+              <div class="item-title">Руководство по Node.js, часть 10: стандартные модули, потоки, базы данных,
+                NODE_ENV</div>
+              <a class="item-link" href="https://habr.com/ru/companies/ruvds/articles/425667/" target="_blank"
+                alt="">https://habr.com/ru/companies/ruvds/articles/425667/</a>
             </li>
             <li class="item">
               <div class="item-title">Играемся с Node.js Часть 1 «Пишем свой первый сервер»</div>
-              <a class="item-link" href="https://habr.com/ru/sandbox/123615/" target="_blank" alt="">https://habr.com/ru/sandbox/123615/</a>
+              <a class="item-link" href="https://habr.com/ru/sandbox/123615/" target="_blank"
+                alt="">https://habr.com/ru/sandbox/123615/</a>
             </li>
             <li class="item">
               <div class="item-title">Node.js 2022Q4 Task 1 Solutions Review Task 2 Issuance</div>
-              <a class="item-link" href="https://www.youtube.com/watch?v=9TQbB8zFf9E&list=PLzLiprpVuH8cWO9jbKgmosIZbKieENuxB&index=9&ab_channel=RollingScopesSchool" target="_blank" alt="">https://www.youtube.com/watch?v=9TQbB8zFf9E&list=PLzLiprpVuH8cWO9jbKgmosIZbKieENuxB&index=9&ab_channel=RollingScopesSchool</a>
+              <a class="item-link"
+                href="https://www.youtube.com/watch?v=9TQbB8zFf9E&list=PLzLiprpVuH8cWO9jbKgmosIZbKieENuxB&index=9&ab_channel=RollingScopesSchool"
+                target="_blank"
+                alt="">https://www.youtube.com/watch?v=9TQbB8zFf9E&list=PLzLiprpVuH8cWO9jbKgmosIZbKieENuxB&index=9&ab_channel=RollingScopesSchool</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1279,11 +1285,16 @@
             </li>
             <li class="item">
               <div class="item-title">Документация по react router, navigate</div>
-              <a class="item-link" href="https://reactrouter.com/en/main/components/navigate" target="_blank" alt="">https://reactrouter.com/en/main/components/navigate</a>
+              <a class="item-link" href="https://reactrouter.com/en/main/components/navigate" target="_blank"
+                alt="">https://reactrouter.com/en/main/components/navigate</a>
             </li>
             <li class="item">
-              <div class="item-title">Полное руководство по React Router v6. Часть 2 - Продвинутые определения маршрутов</div>
-              <a class="item-link" href="https://it-dev-journal.ru/articles/polnoe-rukovodstvo-po-react-router-v6-opredeleniya-marshrutov" target="_blank" alt="">https://it-dev-journal.ru/articles/polnoe-rukovodstvo-po-react-router-v6-opredeleniya-marshrutov</a>
+              <div class="item-title">Полное руководство по React Router v6. Часть 2 - Продвинутые определения маршрутов
+              </div>
+              <a class="item-link"
+                href="https://it-dev-journal.ru/articles/polnoe-rukovodstvo-po-react-router-v6-opredeleniya-marshrutov"
+                target="_blank"
+                alt="">https://it-dev-journal.ru/articles/polnoe-rukovodstvo-po-react-router-v6-opredeleniya-marshrutov</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1316,6 +1327,19 @@
               <div class="item-title">Введение в graphql (видео, 40 минут)</div>
               <a class="item-link" href="https://www.youtube.com/watch?v=BVEm3IjrgGI" target="_blank"
                 alt="">https://www.youtube.com/watch?v=BVEm3IjrgGI</a>
+            </li>
+            <li class="item">
+              <div class="item-title">KNOWCITY. Redux не нужен. GraphQL и Apollo Client.</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=OezyScvU9-c" target="_blank"
+                alt="">https://www.youtube.com/watch?v=OezyScvU9-c</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1360,19 +1384,23 @@
             </li>
             <li class="item">
               <div class="item-title">Самое понятное 13 минутное видео про редакс</div>
-              <a class="item-link" href="https://www.youtube.com/watch?v=jvkhKRHS2TY" target="_blank" alt="">https://www.youtube.com/watch?v=jvkhKRHS2TY</a>
+              <a class="item-link" href="https://www.youtube.com/watch?v=jvkhKRHS2TY" target="_blank"
+                alt="">https://www.youtube.com/watch?v=jvkhKRHS2TY</a>
             </li>
             <li class="item">
               <div class="item-title">Странный ИДЕАЛЬНЫЙ учебник по rtk query</div>
-              <a class="item-link" href="https://safronman.gitbook.io/rtk-4-cards-popbnrty/" target="_blank" alt="">https://safronman.gitbook.io/rtk-4-cards-popbnrty/</a>
+              <a class="item-link" href="https://safronman.gitbook.io/rtk-4-cards-popbnrty/" target="_blank"
+                alt="">https://safronman.gitbook.io/rtk-4-cards-popbnrty/</a>
             </li>
             <li class="item">
               <div class="item-title">METANIT redux</div>
-              <a class="item-link" href="https://metanit.com/web/react/5.3.php" target="_blank" alt="">https://metanit.com/web/react/5.3.php</a>
+              <a class="item-link" href="https://metanit.com/web/react/5.3.php" target="_blank"
+                alt="">https://metanit.com/web/react/5.3.php</a>
             </li>
             <li class="item">
               <div class="item-title">KNOWCITY redux, наипонятнейшее</div>
-              <a class="item-link" href="https://www.youtube.com/watch?v=lTnJG4_hlys&ab_channel=knowcity" target="_blank" alt="">https://www.youtube.com/watch?v=lTnJG4_hlys&ab_channel=knowcity</a>
+              <a class="item-link" href="https://www.youtube.com/watch?v=lTnJG4_hlys&ab_channel=knowcity"
+                target="_blank" alt="">https://www.youtube.com/watch?v=lTnJG4_hlys&ab_channel=knowcity</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1424,11 +1452,13 @@
             </li>
             <li class="item">
               <div class="item-title">Хороший учебник по тайпскрипту</div>
-              <a class="item-link" href="https://my-js.org/docs/guide/ts/" target="_blank" alt="">https://my-js.org/docs/guide/ts/</a>
+              <a class="item-link" href="https://my-js.org/docs/guide/ts/" target="_blank"
+                alt="">https://my-js.org/docs/guide/ts/</a>
             </li>
             <li class="item">
               <div class="item-title">KNOWCITY typescript</div>
-              <a class="item-link" href="https://www.youtube.com/watch?v=tej4MeqT1SE&ab_channel=knowcity" target="_blank" alt="">https://www.youtube.com/watch?v=tej4MeqT1SE&ab_channel=knowcity</a>
+              <a class="item-link" href="https://www.youtube.com/watch?v=tej4MeqT1SE&ab_channel=knowcity"
+                target="_blank" alt="">https://www.youtube.com/watch?v=tej4MeqT1SE&ab_channel=knowcity</a>
             </li>
           </ul>
         </div>
@@ -1773,28 +1803,37 @@
                 alt="">https://rs.school/js-stage0/</a>
             </li>
             <li class="item">
-              <div class="item-title">Понедельный план курса с теорией и практикой. Stage 0. JS/Frontend Development.</div>
-              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/stage0" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/stage0</a>
+              <div class="item-title">Понедельный план курса с теорией и практикой. Stage 0. JS/Frontend Development.
+              </div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/stage0"
+                target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/stage0</a>
             </li>
             <li class="item">
-              <div class="item-title">Понедельный план курса с теорией и практикой. Stage 1. JS/Frontend Development.</div>
-              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/stage1" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/stage1</a>
+              <div class="item-title">Понедельный план курса с теорией и практикой. Stage 1. JS/Frontend Development.
+              </div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/stage1"
+                target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/stage1</a>
             </li>
             <li class="item">
-              <div class="item-title">Понедельный план курса с теорией и практикой. Stage 2. JS/Frontend Development. Typescript. </div>
-              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/stage2" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/stage2</a>
+              <div class="item-title">Понедельный план курса с теорией и практикой. Stage 2. JS/Frontend Development.
+                Typescript. </div>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/stage2"
+                target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/stage2</a>
             </li>
             <li class="item">
               <div class="item-title">Понедельный план курса с теорией и практикой. Stage 3. React.js.</div>
-              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/react" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/react</a>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/react"
+                target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/react</a>
             </li>
             <li class="item">
               <div class="item-title">Понедельный план курса с теорией и практикой. Stage 3. Angular.js.</div>
-              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/angular" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/angular</a>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/angular"
+                target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/angular</a>
             </li>
             <li class="item">
               <div class="item-title">Понедельный план курса с теорией и практикой. Backend. Node.js.</div>
-              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/node" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/node</a>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/tree/master/node"
+                target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/tree/master/node</a>
             </li>
             <li class="item">
               <div class="item-title">Приложение в котором проходит обучение в RS-school</div>
@@ -1810,7 +1849,8 @@
           <ul class="list">
             <li class="item">
               <div class="item-title">Deploy Full Stack App to Vercel | React Nodejs Express Mongo | MERN Tutorial</div>
-              <a class="item-link" href="https://www.youtube.com/watch?v=YYmzj5DK_5s" target="_blank" alt="">https://www.youtube.com/watch?v=YYmzj5DK_5s</a>
+              <a class="item-link" href="https://www.youtube.com/watch?v=YYmzj5DK_5s" target="_blank"
+                alt="">https://www.youtube.com/watch?v=YYmzj5DK_5s</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1828,7 +1868,8 @@
           <ul class="list">
             <li class="item">
               <div class="item-title">Atomic design</div>
-              <a class="item-link" href="https://atomicdesign.bradfrost.com/chapter-2/" target="_blank" alt="">https://atomicdesign.bradfrost.com/chapter-2/</a>
+              <a class="item-link" href="https://atomicdesign.bradfrost.com/chapter-2/" target="_blank"
+                alt="">https://atomicdesign.bradfrost.com/chapter-2/</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1846,8 +1887,10 @@
           <h2 class="title-theme">Оптимизация производительности</h2>
           <ul class="list">
             <li class="item">
-              <div class="item-title">Оптимизация производительности фронтенда. Часть 2. Event loop, layout, paint, composite</div>
-              <a class="item-link" href="https://habr.com/ru/articles/517594/" target="_blank" alt="">https://habr.com/ru/articles/517594/</a>
+              <div class="item-title">Оптимизация производительности фронтенда. Часть 2. Event loop, layout, paint,
+                composite</div>
+              <a class="item-link" href="https://habr.com/ru/articles/517594/" target="_blank"
+                alt="">https://habr.com/ru/articles/517594/</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1865,19 +1908,39 @@
           <ul class="list">
             <li class="item">
               <div class="item-title">React</div>
-              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/blob/master/react/questions.md" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/blob/master/react/questions.md</a>
+              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/blob/master/react/questions.md"
+                target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/blob/master/react/questions.md</a>
             </li>
             <li class="item">
               <div class="item-title">Frontend</div>
-              <a class="item-link" href="https://github.com/YauhenKavalchuk/interview-questions" target="_blank" alt="">https://github.com/YauhenKavalchuk/interview-questions</a>
+              <a class="item-link" href="https://github.com/YauhenKavalchuk/interview-questions" target="_blank"
+                alt="">https://github.com/YauhenKavalchuk/interview-questions</a>
             </li>
             <li class="item">
               <div class="item-title">CoreJS Interview Base</div>
-              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-basic-coreJS.md" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-basic-coreJS.md</a>
+              <a class="item-link"
+                href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-basic-coreJS.md"
+                target="_blank"
+                alt="">https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-basic-coreJS.md</a>
             </li>
             <li class="item">
               <div class="item-title">CoreJS Interview</div>
-              <a class="item-link" href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-corejs.md" target="_blank" alt="">https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-corejs.md</a>
+              <a class="item-link"
+                href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-corejs.md"
+                target="_blank"
+                alt="">https://github.com/rolling-scopes-school/tasks/blob/master/tasks/interview-corejs.md</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Вопросы по JavaScript</div>
+              <a class="item-link" href="https://www.frontendinterviewhandbook.com/ru/javascript-questions" target="_blank" alt="">https://www.frontendinterviewhandbook.com/ru/javascript-questions</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
             </li>
             <li class="item">
               <div class="item-title"></div>
