feat: add links

--- a/index.html
+++ b/index.html
@@ -1949,6 +1949,42 @@
           </ul>
         </div>
 
+        <div class="theme">
+          <h2 class="title-theme">Обработка ошибок</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title">Обработка ошибок на React с помощью Error Boundary</div>
+              <a class="item-link" href="https://habr.com/ru/amp/publications/661413/" target="_blank" alt="">https://habr.com/ru/amp/publications/661413/</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="theme">
+          <h2 class="title-theme"></h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+          </ul>
+        </div>
+
 
 
 
