--- a/index.html
+++ b/index.html
@@ -1932,11 +1932,15 @@
             </li>
             <li class="item">
               <div class="item-title">Вопросы по JavaScript</div>
-              <a class="item-link" href="https://www.frontendinterviewhandbook.com/ru/javascript-questions" target="_blank" alt="">https://www.frontendinterviewhandbook.com/ru/javascript-questions</a>
+              <a class="item-link" href="https://www.frontendinterviewhandbook.com/ru/javascript-questions"
+                target="_blank" alt="">https://www.frontendinterviewhandbook.com/ru/javascript-questions</a>
             </li>
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Вопросы с linkedin онлайн тестирования. 155 штук.</div>
+              <a class="item-link"
+                href="https://github.com/Ebazhanov/linkedin-skill-assessments-quizzes/blob/main/javascript/javascript-quiz.md"
+                target="_blank"
+                alt="">https://github.com/Ebazhanov/linkedin-skill-assessments-quizzes/blob/main/javascript/javascript-quiz.md</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
@@ -1954,7 +1958,8 @@
           <ul class="list">
             <li class="item">
               <div class="item-title">Обработка ошибок на React с помощью Error Boundary</div>
-              <a class="item-link" href="https://habr.com/ru/amp/publications/661413/" target="_blank" alt="">https://habr.com/ru/amp/publications/661413/</a>
+              <a class="item-link" href="https://habr.com/ru/amp/publications/661413/" target="_blank"
+                alt="">https://habr.com/ru/amp/publications/661413/</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
