--- a/index.html
+++ b/index.html
@@ -1973,6 +1973,26 @@
         </div>
 
         <div class="theme">
+          <h2 class="title-theme">Компании в которые я заочно влюблена и думаю что там кайфово работать )</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title">Банда умников, душевный сайт, крутые проекты, уютный офис</div>
+              <a class="item-link" href="https://bandaumnikov.ru/vacancies/" target="_blank" alt="">https://bandaumnikov.ru/vacancies/</a>
+            </li>
+            <li class="item">
+              <div class="item-title">Крутейший офис у Melon - Бифри</div>
+              <a class="item-link" href="https://spb.hh.ru/vacancy/80294853?from=favorite_vacancy_list" target="_blank" alt="">https://spb.hh.ru/vacancy/80294853?from=favorite_vacancy_list</a>
+              <a class="item-link" href="https://spb.hh.ru/employer/55440?dpt=55440-55440-it&hhtmFrom=vacancy" target="_blank" alt="">https://spb.hh.ru/employer/55440?dpt=55440-55440-it&hhtmFrom=vacancy</a>
+              <a class="item-link" href="https://www.melonfashion.ru/" target="_blank" alt="">https://www.melonfashion.ru/</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="theme">
           <h2 class="title-theme"></h2>
           <ul class="list">
             <li class="item">
