feat: add react borch

--- a/index.html
+++ b/index.html
@@ -1297,8 +1297,8 @@
                 alt="">https://it-dev-journal.ru/articles/polnoe-rukovodstvo-po-react-router-v6-opredeleniya-marshrutov</a>
             </li>
             <li class="item">
-              <div class="item-title"></div>
-              <a class="item-link" href="" target="_blank" alt=""></a>
+              <div class="item-title">Любимый и понятнейший курс про борщ ) Каталог фильмов ) от изи кодерс</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=KLCuRnsLKSc" target="_blank" alt="">https://www.youtube.com/watch?v=KLCuRnsLKSc</a>
             </li>
             <li class="item">
               <div class="item-title"></div>
