--- a/index.html
+++ b/index.html
@@ -1211,6 +1211,24 @@
         </div>
 
         <div class="theme">
+          <h2 class="title-theme">Личные стримы</h2>
+          <ul class="list">
+            <li class="item">
+              <div class="item-title">Object-Oriented Programming with TypeScript by Konstantin</div>
+              <a class="item-link" href="https://www.youtube.com/watch?v=GtR0QYCzNxw" target="_blank" alt="">https://www.youtube.com/watch?v=GtR0QYCzNxw</a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+            <li class="item">
+              <div class="item-title"></div>
+              <a class="item-link" href="" target="_blank" alt=""></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="theme">
           <h2 class="title-theme"></h2>
           <ul class="list">
             <li class="item">
